--- a/portfolio-project/index.html
+++ b/portfolio-project/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <title>Your Name - Portfolio</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <a href="#main-content" class="skip-link">Skip to main content</a>
@@ -21,7 +20,7 @@
     <main id="main-content">
         <section id="about">
             <h2>About Me</h2>
-            <img src="profile.jpg" alt="Profile Photo of Your Name" width="150">
+            <img src="profile.jpg" alt="Profile Photo of Aditya r menon" width="150">
             <p>
                 I am currently pursuing B.Tech in Computer Science and Engineering. I enjoy coding in Python, building web pages, and exploring science and mathematics.
             </p>
@@ -42,7 +41,7 @@
         </section>
         <section id="skills">
             <h2>Technical Skills</h2>
-            <table>
+            <table border="1">
                 <tr>
                     <th>Skill</th>
                     <th>Level</th>
